syntax = "proto3";


// go install google.golang.org/grpc/cmd/protoc-gen-go-grpc
// go install google.golang.org/protobuf/cmd/protoc-gen-go
// PATH="${PATH}:${HOME}/go/bin"      
// protoc --go_out=. --go-grpc_out=. reactions.proto                                                                                ✔  14:01:41  


package reactions;

option go_package = "proto/go/reactions";

service ReactionsService {
  rpc SendEmojiReaction (stream Emoji) returns (Empty) {}
  rpc ReceiveEmojiReaction (Empty) returns (stream Emoji) {}
}

message Emoji {
  EmojiReaction reaction = 1;
}

message Empty {}

enum EmojiReaction {
  UNKNOWN = 0;
  LIKE = 1;
  LOVE = 2;
  HAHA = 3;
  WOW = 4;
  SAD = 5;
  ANGRY = 6;
}
